Swagger za UserController
